--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -112,7 +112,7 @@
 											</div>
 											<div class="6u 12u$(small)">
 												<h3>Defining requirements</h3>
-												<p>I supported my product manager to help define project requirements and milestones. Regular syncs with key stakeholders kept expectations realistic and aligned. We designed a phased approach for developing the chat: we would begin testing with an article companion chat-bot, then move to the home-page, then eventually integrate personalizated features.</p>
+												<p>I supported my product manager to help define project requirements and milestones. Regular syncs with , including the head of SEO and our CEO, kept expectations realistic and aligned. We designed a phased approach for developing the chat: we would begin testing with an article companion chat-bot, then move to the home-page, then eventually integrate personalizated features.</p>
 											</div>
 										</div>
 										
@@ -142,10 +142,10 @@
 											<div class="5u 12u$(small)">
                                             <h2>Ideation and feedback</h2>
 											<p class="_1em-bottom">
-												I begin lo-fi to wrap my head around the problem space and explore design variants quickly, going wide before going deep. I keep product partners posted on my progress and invite feedback even in these early stages of my process, to ensure alignment and hone in on the best approach</p>
+												I began lo-fi to wrap my head around the problem space and explore design variants quickly, going wide before going deep. I kept cross-functional partners posted on my progress to ensure alignment, hone in on the best approach, and modulate designs based on engineering scope. I also shared explorations in our cross-vertical design critiques. </p>
 												<br />
 												<p>
-												I strive to be low-ego and un-protective of my work, actively inviting candid feedback so that partners feel at liberty to bring their best thoughts to the table. I shared out early versions of my designs in our cross-vertical design critiques as well, to get insightful feedback from design peers. 
+												I strive to be low-ego and un-protective of my work, actively inviting candid feedback even at early stages of the process so that partners feel at liberty to bring their best thoughts to the table. 
 											</p>
 											</div>
 											<div class="7u 12u$(small)">
@@ -207,7 +207,7 @@
 													Research
 												</h2>
 												<p class="_1em-bottom">
-													Before handoff, I pressure tested full prototypes of our designs using UserTesting.com so that we can illuminate usability issues before investing in development time. 
+													Before handoff, I pressure tested full prototypes of our designs using UserTesting.com so that we could illuminate usability issues before investing in development time. 
 												</p>
 											</div>
 											<div class="7u 12u$(small)">
@@ -237,12 +237,12 @@
 												<div class="narrow-centered-text">
 													<h1>Post-Development</h1>
 												<h2 style="margin-top: 2em">Analysis and iteration</h2>
-													<p>After rolling out NerdWallet AI, we used AB testing to evaluate the success of our designs.  We supplemented the quantitative data with further video user testing to obtain a qualitative sense of the user experience. (I shared out these findings in detailed decks so that the team could put our heads together to identify the best ways to iterate.)</p>
+													<p>After rolling out NerdWallet AI, we used AB testing to evaluate the success of our designs.  We supplemented the quantitative data with further video user testing to obtain a qualitative sense of the user experience. (I shared out these findings in detailed decks so that the team could have shared consciousness.)</p>
 												
 													<div class="image main">
 														<img class="img-shadow" src="images/closing-slides.png"/>
 													</div>
-													The qualitative data through usertesting helps us interpret the quantitative data that we receive. For instance, an early pass of NerdWallet AI, which was designed as a pop-up chat, had low engagement. Our user research revealed that many users reflexively closed the pop-up.  Switching to a version of the chat that was inline with the page helped increase user engagement, from 1.42% to up to 5.01%.
+													The qualitative data through usertesting helps us interpret the quantitative data that we receive. For instance, our first pass of NerdWallet AI, which was designed as a pop-up, had low engagement. Our user research revealed that many users responded to the pop-up by reflexively closing it.  Modifying the chat to make it inline with the page helped increase user engagement, from 1.42% to up to 5.01%.
 												</div>
 												<h2 style="margin-top: 2em" class="narrow-centered-text">Successes</h2>
 
@@ -261,7 +261,7 @@
 													<div class="row center-contents">
 														<div class="5u 12u$(small)">
 															<h3>aiding the nerdwallet user journey</h3>
-															<p>We discovered that the presence of the chat-bot could boost user engagment with the rest of the site, increasing average user page views and increasing likelihood of monetizing.  For our article chat-bot, 28% of users would click through to a related link.</p>
+															<p>We discovered that the presence of the chat-bot could boost user engagment with the rest of the site, increasing average user page views and increasing likelihood of monetizing.  For our article chat-bot, 28% of users would click a related link provided the chat, increasing their likelihood of monetizing.</p>
 														</div>
 														<div class="5u 12u$(small)">
 															<h3>Product expansion</h3>
