--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -71,10 +71,10 @@
                                                 <b>User Needs:</b> Quickly find accurate answers to complex financial questions.
                                             </li>
                                             <li>
-                                                <b>Business Needs: </b>Differentiate NerdWallet from LLM competitors with a unique, trustworthy AI chat experience. Utilize this to drive registrations and traffic to our monetizing pages.
+                                                <b>Business Needs: </b>Differentiate NerdWallet from LLM competitors with a unique, trustworthy AI chat experience. Bonus: utilize the chat to drive registrations and traffic to our monetizing pages.
                                             </li>
                                             <li>   
-                                                <b>Hypothesis: </b> Providing users with a chat that answers user queries and cites and directs them to fact-checked NerdWallet content will increase user satisfaction, engagement, and loyalty. 
+                                                <b>Hypothesis: </b> Providing a chat that answers user queries, as well as cites and directs them to fact-checked NerdWallet content, will increase user engagement, and loyalty. 
                                             </li>
                                         </ul>
 									</div>
@@ -112,7 +112,7 @@
 											</div>
 											<div class="6u 12u$(small)">
 												<h3>Defining requirements</h3>
-												<p>I supported my product manager to help define project requirements and milestones. Regular syncs with , including the head of SEO and our CEO, kept expectations realistic and aligned. We designed a phased approach for developing the chat: we would begin testing with an article companion chat-bot, then move to the home-page, then eventually integrate personalizated features.</p>
+												<p>I supported my product manager to help define project requirements and milestones. Regular syncs with key stakeholders, including the head of SEO and our CEO, kept expectations realistic and aligned. We designed a phased approach for developing the chat: we would begin testing with an article companion chat-bot, then move to the home-page, then eventually integrate personalizated features.</p>
 											</div>
 										</div>
 										
@@ -142,10 +142,10 @@
 											<div class="5u 12u$(small)">
                                             <h2>Ideation and feedback</h2>
 											<p class="_1em-bottom">
-												I began lo-fi to wrap my head around the problem space and explore design variants quickly, going wide before going deep. I kept cross-functional partners posted on my progress to ensure alignment, hone in on the best approach, and modulate designs based on engineering scope. I also shared explorations in our cross-vertical design critiques. </p>
+												I began lo-fi to wrap my head around the problem space and explore design variants quickly, going wide before going deep. I kept cross-functional partners posted on my progress to ensure alignment, hone in on the best approach, and modulate designs based on engineering scope. I also solicited feedback from design peers through our cross-vertical design critiques. </p>
 												<br />
 												<p>
-												I strive to be low-ego and un-protective of my work, actively inviting candid feedback even at early stages of the process so that partners feel at liberty to bring their best thoughts to the table. 
+												I strive to be low-ego and un-protective of my work so that partners feel at liberty to bring their best thoughts to the table. 
 											</p>
 											</div>
 											<div class="7u 12u$(small)">
@@ -223,7 +223,7 @@
 												Handoff 
 											</h2>
 											<p>
-												To ensure seamless translation of design to dev, I thoroughly annotate designs, comprehensively enumerate design requirements, and conduct walk-throughs for the engineers.  Putting the work in up-front helps reduce the number of issues that surface in post-development design reviews.
+												To ensure seamless translation of design to dev, I thoroughly annotate designs, comprehensively enumerate design requirements, and conduct walk-throughs for the engineers.  Putting the work in up-front helps reduce errors that surface in post-development design reviews.
 											</p>
 											</div>
 											<div class="image main">
