remove extraneous comma
remove extraneous comma

--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -74,7 +74,7 @@
                                                 <b>Business Needs: </b>Differentiate NerdWallet from LLM competitors with a unique, trustworthy AI chat experience. Bonus: utilize the chat to drive registrations and traffic to our monetizing pages.
                                             </li>
                                             <li>   
-                                                <b>Hypothesis: </b> Providing a chat that answers user queries, as well as cites and directs them to fact-checked NerdWallet content, will increase user engagement, and loyalty. 
+                                                <b>Hypothesis: </b> Providing a chat that answers user queries, as well as cites and directs them to fact-checked NerdWallet content, will increase user engagement and loyalty. 
                                             </li>
                                         </ul>
 									</div>
