--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -254,14 +254,14 @@
 														<div class="5u 12u$(small)">
 															<h3>User engagement</h3>
 															<p>
-																Through multiple rounds of research, analysis, and iteration, we increased the engagement with our chatbot from 1.42% to 5.01%.
+																Through multiple rounds of research, analysis, and iteration, we increased the engagement with our article chatbot from 1.42% to 5.01%.
 															</p>
 														</div>
 													</div>
 													<div class="row center-contents">
 														<div class="5u 12u$(small)">
 															<h3>aiding the nerdwallet user journey</h3>
-															<p>We discovered that the presence of the chat-bot could boost user engagment with the rest of the site, increasing average user page views and increasing likelihood of monetizing.  For our article chat-bot, 28% of users would click a related link provided the chat, increasing their likelihood of monetizing.</p>
+															<p>We discovered that the presence of the chat-bot could boost user engagment with the rest of the site, increasing average user page views and increasing likelihood of monetizing.  For our article chat-bot, 28% of users would click a related link provided the chat, increasing their likelihood of monetizing. For the home page version, we increased mClicks by 17.1%.</p>
 														</div>
 														<div class="5u 12u$(small)">
 															<h3>Product expansion</h3>
