ad chat-video animation
ad chat-video animation

--- a/nerdwallet.html
+++ b/nerdwallet.html
@@ -47,22 +47,20 @@
 										<h1>NerdWallet AI</h1>
                                         <!-- <p><em><b style="color: red !important">page under construction; please contact me at noahskang@gmail.com if you would like more information in the mean time! :)</b></em></p> -->
 									</header>
-									<!-- <span class="image main"><img src="images/maint1-hero-img.jpg" alt="" /></span> -->
 									<div class="content-block">
-										<div class="row horizontally-centered">
-											<div class="8u 12u$(small)">
-												<div class="image main">
-													<img class="img-shadow" src="images/nerdai-hero.jpg"/>
-												</div>
-											</div>
-											<div class="4u 12u$(small)">
-												<h2>Context</h2>
-												<p>
-													In 2023, I led a hackathon team to create an MVP chat module incorporating ChatGPT technology, winning the top award and inspiring leadership to establish a dedicated AI team, where I led design.</p>
-													<p>NerdWallet’s mission is to empower users with the information they need to make financial decisions confidently. The rise of LLMs presented a competitive challenge to us. But could we harness this technology and offer our own unique service? 
-												</p>
-											</div>
-										</div>
+										<div class="narrow-centered-text">
+										<h2>Context</h2>
+										<p>
+											In 2023, I led a hackathon team to create an MVP chat module incorporating ChatGPT technology, winning the top award and inspiring leadership to establish a dedicated AI team, where I led design.</p>
+											<p>NerdWallet’s mission is to empower users with the information they need to make financial decisions confidently. The rise of LLMs presented a competitive challenge to us. But could we harness this technology and offer our own unique service? 
+										</p>
+									</div>
+									</div>
+									<!-- <span class="image main"><img src="images/maint1-hero-img.jpg" alt="" /></span> -->
+									<div class="image main">
+										<video width="100%" autoplay muted>
+											<source src="images/nerdai-chat-video.mp4" type="video/mp4">
+										</video>
 									</div>
 									<div class="content-block narrow-centered-text">
 										<h2>Objectives</h2>
